--- a/contents.html
+++ b/contents.html
@@ -11,16 +11,16 @@
   </header>
 
   <main class="center-container">
-    <section class="settings-section">
+    <section class="settings-section-contents">
       <h2>ページを選んでください</h2>
 
       <div class="settings-container-contents">
-        <div class="settings-left">
+        <div class="settings-left-contents">
           <p>通常版のページを開きます。</p>
           <button onclick="location.href='index.html'">PC向けCCG を開く</button>
         </div>
 
-        <div class="settings-right">
+        <div class="settings-right-contents">
           <p>スマホ用に調整されたページを開きます。</p>
           <p>お勧めしません。</p>
           <button onclick="location.href='index_sd.html'">スマホ向けCCG を開く</button>
