--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>電波人間のカードジェネレーター</title>
+    <title>カードジェネレーター</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Google FontsからOrbitronを読み込む -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
     <!-- タイトルとモーダルボタン -->
     <header>
-        <h1>電波人間のキャラクターカードジェネレーター</h1>
+        <h1>キャラクターカードジェネレーター</h1>
         <div class="modal-buttons">
             <button id="rulesBtn">利用規約</button>
             <button id="howtoBtn">使い方</button>
